Added CP1 - HelloAR

--- a/AR-Blogs/cp1_helloAR.html
+++ b/AR-Blogs/cp1_helloAR.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>CP1 - HelloAR</title>
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     </head>
     <body>
@@ -7,7 +8,7 @@
             <a-box position="-1 0.5 -3" rotation="0 45 0" color="#124590"> </a-box>
             <a-sphere position="0 1.25 -5" radius="1.25" color="#ABCD12"></a-sphere>
             <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#89AB34"></a-cylinder>
-            <a-sky color="#ECECEC"></a-sky>
+            <a-sky color="#91ADF5"></a-sky>
         </a-scene>
     </body>
 </html>
