--- a/AR-Blogs/cp1_helloAR.html
+++ b/AR-Blogs/cp1_helloAR.html
@@ -2,12 +2,13 @@
     <head>
         <title>CP1 - HelloAR</title>
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+        <script src="https://unpkg.com/aframe-physics-system@1.4.0/dist/aframe-physics-system.min.js"></script>
     </head>
     <body>
         <a-scene>
-            <a-box position="-1 0.5 -3" rotation="0 45 0" color="#124590"> </a-box>
-            <a-sphere position="0 1.25 -5" radius="1.25" color="#ABCD12"></a-sphere>
-            <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#89AB34"></a-cylinder>
+            <a-box position="-1 0.5 -3" rotation="0 45 0" color="#124590" static-body> </a-box>
+            <a-sphere position="0 1.25 -5" radius="1.25" color="#ABCD12" dynamic-body></a-sphere>
+            <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#89AB34" dynamic-body></a-cylinder>
             <a-sky color="#91ADF5"></a-sky>
         </a-scene>
     </body>
