Statiic body addeed

--- a/AR-Blogs/cp1_helloAR.html
+++ b/AR-Blogs/cp1_helloAR.html
@@ -7,7 +7,8 @@
     <body>
         <a-scene>
             <a-box position="-1 0.5 -3" rotation="0 45 0" color="#124590" static-body> </a-box>
-            <a-sphere position="0 1.25 -5" radius="1.25" color="#ABCD12" dynamic-body></a-sphere>
+            <a-sphere position="0 1.25 -5" radius="1.25" color="#ABCD12" static-body></a-sphere>
+            <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#89AB34" static-body></a-cylinder>
             <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#89AB34" dynamic-body></a-cylinder>
             <a-sky color="#91ADF5"></a-sky>
         </a-scene>
